# advent

./: .gitignore  README.md  get_input.sh  mix.exs
2022/: dune-project
2022/lib/: advent.ml  day11.ml  day4.ml  day7.ml  day9.ml
2023/: Cargo.toml  run
2023/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  dayn.rs  lib.rs  main.rs
lib/: advent.ex  advent.ml  day1.ml  day10.ml  day11.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day8.ml  day9.ml  util.ml
lib/advent/: advent.ml  dune  solver.ex
lib/advent/year2024/: day1.ex  day2.ex  day3.ex  day4.ex  day5.ex  day6.ex  day7.ex  day8.ex  day9.ex
lib/mix/tasks/: solve.ex
lib/year2022/: day1.ml  day10.ml  day11.ml  day3.ml  day5.ml  day6.ml
lib/year2023/: day1.ml  day10.ml  day11.ml  day13.ml  day14.ml  day15.ml  day16.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dayn.ml  dune  solver.ml  util.ml  year2023.ml
test/advent/year2024/: day2_test.exs  day3_test.exs  day4_test.exs  day5_test.exs  day6_test.exs  day7_test.exs  day8_test.exs  day9_test.exs
test/support/: day_template.ex
test/year2024/: day1_test.exs
