(lang dune 3.10)

(name advent)

(source
 (github flmng0/advent))

(authors "Timothy Davis")

(license MIT)

(package
 (name advent)
 (synopsis "Advent of Code solutions")
 (description "Advent of Code solutions implemented in OCaml, to learn functional programming as a paradigm.")
 (depends ocaml dune))
